# TacoGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/TacoGL/: AttributeFormat.h  Buffer.h  Buffer.hpp  Error.h  ExtensionRegister.h  Framebuffer.h  Object.h  OpenGL.h  Program.h  Renderbuffer.h  Sampler.h  Shader.h  Texture.h  VertexArray.h  algebra.h  capability.h  draw.h  get.h
include/TacoGL/capabilities/: Blend.h  Capability.h  ColorLogicOperator.h  DepthTest.h
shaders/: convolve.compute.glsl  convolve.include.glsl
source/TacoGL/: AttributeFormat.cpp  Buffer.cpp  Error.cpp  ExtensionRegister.cpp  Framebuffer.cpp  Program.cpp  Renderbuffer.cpp  Sampler.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
